Fixed issue with commit checks on main.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  ind-modules:
+  find-modules:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
